# soar-dl

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: nightly.yaml  release.yaml
src/: archive.rs  common.rs  downloader.rs  error.rs  github.rs  gitlab.rs  http_client.rs  lib.rs  oci.rs  platform.rs  resume.rs  utils.rs
