[package]
name = "soar-dl"
version = "0.4.2"
authors = ["Rabindra Dhakal <contact@qaidvoid.dev>"]
description = "A fast download manager"
license = "MIT"
edition = "2021"
repository = "https://github.com/pkgforge/soar-dl"
keywords = ["download-manager", "binary", "github", "gitlab", "direct"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
binary = ["clap", "indicatif"]

[dependencies]
bzip2 = "0.5.2"
clap = { version = "4.5.31", features = ["cargo", "derive"], optional = true }
flate2 = "1.1.0"
futures = "0.3.31"
indicatif = { version = "0.17.11", optional = true }
regex = { version = "1.11.1", default-features = false, features = ["std", "unicode-case", "unicode-perl"] }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "stream", "http2", "blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tar = "0.4.44"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
xz2 = "0.1.7"
zip = "2.2.3"
zstd = "0.13.3"

[[bin]]
name = "soar-dl"
required-features = ["binary"]
