[package]
name = "soar-dl"
version = "0.5.3"
authors = ["Rabindra Dhakal <contact@qaidvoid.dev>"]
description = "A fast download manager"
license = "MIT"
edition = "2021"
repository = "https://github.com/pkgforge/soar-dl"
keywords = ["download-manager", "binary", "github", "gitlab", "direct"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
binary = ["clap", "indicatif"]

[dependencies]
bzip2 = "0.5.2"
clap = { version = "4.5.35", features = ["cargo", "derive"], optional = true }
fast-glob = "0.4.5"
flate2 = "1.1.1"
futures = "0.3.31"
indicatif = { version = "0.17.11", optional = true }
regex = { version = "1.11.1", default-features = false, features = ["std", "unicode-case", "unicode-perl"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "stream", "http2", "blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
xz2 = "0.1.7"
zip = "2.6.1"
zstd = "0.13.3"

[[bin]]
name = "soar-dl"
required-features = ["binary"]
