[package]
name = "soar-dl"
version = "0.6.3"
authors = ["Rabindra Dhakal <contact@qaidvoid.dev>"]
description = "A fast download manager"
license = "MIT"
edition = "2021"
repository = "https://github.com/pkgforge/soar-dl"
keywords = ["download-manager", "binary", "github", "gitlab", "direct"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
binary = ["clap", "indicatif"]

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.39", features = ["cargo", "derive"], optional = true }
compak = "0.0.1"
fast-glob = "0.4.5"
futures = "0.3.31"
indicatif = { version = "0.17.11", optional = true }
regex = { version = "1.11.1", default-features = false, features = ["std", "unicode-case", "unicode-perl"] }
reqwest = { version = "0.12.18", default-features = false, features = ["rustls-tls", "stream", "http2", "blocking", "json", "socks"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["io-std", "macros", "rt-multi-thread"] }
url = "2.5.4"

[[bin]]
name = "soar-dl"
required-features = ["binary"]
